WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171603
YouTube user agent quirk breaks new YouTube
https://bugs.webkit.org/show_bug.cgi?id=171603
Summary
YouTube user agent quirk breaks new YouTube
Michael Catanzaro
Reported
2017-05-03 09:04:15 PDT
Our user agent quirk to make YouTube 360 work breaks the new YouTube UI, causing it to attempt to use the obsolete custom elements v0 API. WebKit only supports the v1 API. We have to remove this quirk. Note this does not affect Safari as Apple ports don't use our user agent quirks.
Attachments
Patch
(3.11 KB, patch)
2017-05-03 09:07 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-05-03 09:07:42 PDT
Created
attachment 308908
[details]
Patch
Michael Catanzaro
Comment 2
2017-05-03 13:21:18 PDT
""" This preview is closed... for now Thanks for your interest in helping us with the new desktop design! We've got a ton of feedback we're reading through, so we've closed the opt-in. """ So, I was apparently too slow and can't test this patch anymore... also, YouTube is crashing in trunk on
bug #171336
. But disabling/enabling site-specific quirks in MiniBrowser definitely toggled the problem when I tested it earlier today. So let's go with this.
WebKit Commit Bot
Comment 3
2017-05-03 13:51:04 PDT
Comment on
attachment 308908
[details]
Patch Clearing flags on attachment: 308908 Committed
r216139
: <
http://trac.webkit.org/changeset/216139
>
WebKit Commit Bot
Comment 4
2017-05-03 13:51:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug